--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -2035,9 +2035,10 @@ footer {
       padding-bottom: 10px; }
   .service-info .service-info-label::after {
     content: ':'; }
-  .service-info .service-info-value.service-info-value-sla div {
-    display: inline-block; }
-    .service-info .service-info-value.service-info-value-sla div:not(:last-child) {
+  .service-info .service-info-value .service-info-value-sla {
+    display: inline-block;
+    word-break: break-word; }
+    .service-info .service-info-value .service-info-value-sla:not(:last-child) {
       margin-right: 10px; }
   .service-info .service-name {
     padding-bottom: 5px;
